Add PDF page limiting and fix UDF timeout configuration
This commit introduces several improvements for handling large PDFs and configuring timeouts:

## PDF Page Limiting
- Add convenience methods to SplitStep for easy page limiting:
  - `SplitStep.withPageLimit(n)` - limits to first n pages
  - `SplitStep.withPageRange(start, end)` - extracts specific page range
  - `SplitStep.auto(pageLimit)` - auto strategy with optional page limit
- Update both PDF splitters (Aspose and PDFBox) to respect pageRange config
- Add comprehensive tests for page limiting functionality

## UDF Timeout Fix
- Fix SparkStep.withUdfTimeout to properly apply timeouts to case class steps
- Use pattern matching and copy method instead of wrapper approach
- Add unit and integration tests to verify timeout configuration

## Test Infrastructure
- Fix Spark integration tests for Java 11+ compatibility
- Add classLoaderLayeringStrategy and Java module options to build.sbt
- All tests now pass successfully

## Documentation
- Update README with examples of page limiting usage
- Update SparkDemo to demonstrate page limit configuration
- Add clear documentation for preventing memory issues with large PDFs

These changes make it much easier to process large PDFs without memory issues
by limiting the number of pages extracted, while also ensuring that UDF timeouts
can be properly configured for all step types.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>