@@ -238,6 +238,24 @@ lazy val coreSpark = (project in file("core-spark"))
     name               := "xlcr-core-spark",
     scalaVersion       := "2.12.18",
     crossScalaVersions := Seq(scala212, scala213, scala3),
+    // Fix for Spark tests with Java 11+
+    Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.Flat,
+    Test / fork := true,
+    Test / javaOptions ++= Seq(
+      "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+      "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens", "java.base/java.io=ALL-UNNAMED",
+      "--add-opens", "java.base/java.net=ALL-UNNAMED",
+      "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+      "--add-opens", "java.base/java.util=ALL-UNNAMED",
+      "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+      "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens", "java.base/sun.nio.cs=ALL-UNNAMED",
+      "--add-opens", "java.base/sun.security.action=ALL-UNNAMED",
+      "--add-opens", "java.base/sun.util.calendar=ALL-UNNAMED"
+    ),
     // ---------------------------------------------------------------------
     // Spark does not ship native Scala-3 artifacts (yet).  Because Scala 3
     // remains binary-compatible with Scala 2.13, we can safely depend on the
